--- a/client/app/views/templates/choices.css
+++ b/client/app/views/templates/choices.css
@@ -106,6 +106,7 @@
   border-radius: 2px;
   box-shadow: 0px 0px 8px rgba(0,0,0,0.7);
   border:1px solid black;
+  max-width:98%;
 }
 
 .embededElement iframe{
