--- a/client/public/stylesheets/app.css
+++ b/client/public/stylesheets/app.css
@@ -254,6 +254,7 @@ h1 {
   border-radius: 2px;
   box-shadow: 0px 0px 8px rgba(0,0,0,0.7);
   border:1px solid black;
+  max-width:98%;
 }
 
 .embededElement iframe{
