--- a/client/public.css
+++ b/client/public.css
@@ -68,7 +68,7 @@ h1{
   padding-bottom: 10px;
   border-radius: 8px 8px 3px 3px;
   background-color: rgb(44,62,80);
-  max-height: 65px;
+  height: 65px;
   margin-top:-8px;
   overflow: hidden;
   transition:all 0.3s ease;
@@ -76,17 +76,19 @@ h1{
 
 /*if the user chooses on these tabs*/
 .tab.choiceCategory{
-  max-height:500px!important;
+  height:auto!important;
+  min-height: 80px!important;
   margin-top:-8px!important;
   overflow: scroll;
   box-shadow: 0px 0px 15px black;
   background-color: rgb(64,82,100);
+  transition:all 0.3s ease;
 }
 
 /*if the user hovers on these tabs*/
 .tab:hover{
   box-shadow: 0px 0px 15px black;
-  max-height:100px;
+  height:100px;
   margin-top:-43px;
   transition:all 0.3s ease;
 }
@@ -181,13 +183,31 @@ img.badgeImage{
   padding:5px;
   background-color: rgba(255,255,255,0.9);
   min-height:124px;
+  font-size: 12pt;
 }
 
 .documentBlock .documentContent a{
-  color:black;
+  color:#2980b9;
   text-decoration: underline;
 }
 
 .documentBlock .documentContent .documentTitle{
   padding-left:25px;
+  font-size:14pt;
+}
+
+.documentBlock .documentContent .documentDate{
+  font-size: 10pt;
+}
+
+/*FOR EMBEDED ELEMENTS*/
+.embededElement img{
+  border-radius: 2px;
+  box-shadow: 0px 0px 8px rgba(0,0,0,0.7);
+  border:1px solid black;
+  max-width:98%;
+}
+
+.embededElement iframe{
+  border:1px solid black;
 }
