--- a/client/public.jade
+++ b/client/public.jade
@@ -68,13 +68,15 @@ html
                     div.documentBlock.col-md-12
                       div.documentContent.col-md-12
                         p.documentTitle #{document.title}
+                        if document.emebededCode
+                          !{document.emebededCode}
                         p.documentDescription #{document.description}
                         if document.url
                           a(href="#{document.url}" target="_blank") Lien du document
                             br
                         if document.relatedWebsite
                           a(href="#{document.relatedWebsite}" target="_blank") Site web associé
-                        p.documentDate Réalisé le #{document.creationDate}
+                        p.documentDate Daté du #{document.creationDate}
                         
           if badges
             div.row.tab#badgesTab
